# cabify

./: .gitignore  CMakeLists.txt  README.md
client/: client.go
cmake/: FindNlohmann.cmake  FindPistache.cmake
server/: CMakeLists.txt  main.cpp
server/common/: CMakeLists.txt
server/common/include/common/: error.hpp
server/controller/: CMakeLists.txt
server/controller/include/controller/: amountgetter.hpp  basketcreator.hpp  checkoutcreator.hpp  discount.hpp  discount2x1.hpp  productcreator.hpp
server/controller/src/: amountgetter.cpp  basketcreator.cpp  checkoutcreator.cpp  discount2x1.cpp  productcreator.cpp
server/model/: CMakeLists.txt
server/model/include/model/: amount.hpp  basket.hpp  memory.hpp  model.hpp  product.hpp  stock.hpp
server/model/src/: amount.cpp  basket.cpp  memory.cpp  product.cpp  stock.cpp
server/view/: CMakeLists.txt
server/view/include/view/: rest.hpp  view.hpp
server/view/src/: rest.cpp  view.cpp
